--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     }
     h3 {
       text-align: right;
-      color: #b22222;
+      color: #f31313;
       font-family: "Georgia", serif;
       font-size: 24px;
     }
@@ -39,11 +39,11 @@
       font-weight: bold;
     }
     a:hover {
-      color: #ff6600;
+      color: #e108a0;
     }
     .icon {
       margin-right: 8px;
-      color: #ff6600;
+      color: #10e048;
     }
   </style>
 </head>
@@ -58,16 +58,25 @@
     </tr>
     <tr>
       <td>Grilled Chicken</td>
-      <td>$12.99</td>
+      <td>$12.1</td>
     </tr>
     <tr>
-      <td>Pasta Alfredo</td>
-      <td>$9.99</td>
+      <td>Butter Chicken</td>
+      <td>$10.2</td>
     </tr>
     <tr>
       <td>Cheeseburger</td>
       <td>$8.49</td>
     </tr>
+<tr>
+      <td>Chocolate Cake</td>
+      <td>$10.59</td>
+    </tr>
+<tr>
+      <td>Pizza</td>
+      <td>$9.49</td>
+    </tr>
+
   </table>
 
   <p style="text-align:center; margin-top:20px;">
