--- a/contactcard.html
+++ b/contactcard.html
@@ -20,7 +20,6 @@
       padding: 15px;
       font-size: 20px;
       font-weight: bold;
-      z-index: 1000;
     }
 
     
@@ -31,14 +30,11 @@
       border: 1px solid #ccc;
       padding: 20px;
       display: flex;              
-      justify-content: space-between;
       align-items: flex-start;
-      gap: 20px;
     }
 
     .profile-left {
       display: flex;
-      gap: 20px;
       flex: 1;
     }
 
@@ -46,6 +42,7 @@
       width: 120px;
       height: 120px;
       border-radius: 50%;
+      margin-right: 20px;
     }
 
     .profile-info {
@@ -89,7 +86,7 @@
       <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Profile Image" class="profile-img">
 
       <div class="profile-info">
-        <h2>John Doe</h2>
+        <h2>John Starc</h2>
         <p><strong>Title:</strong> Senior Developer</p>
 
         <p>John is an experienced software engineer with over 10 years of professional expertise in designing and developing scalable web applications. He has a strong background in cloud-based solutions and has successfully delivered numerous enterprise-level projects across different industries.</p>
