--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
       font-weight: bold;
     }
     a:hover {
-      color: #e108a0;
+      color: #a8ef0e;
     }
     .icon {
       margin-right: 8px;
