day 2 bootsrtap hw

--- a/fooddelivery.html
+++ b/fooddelivery.html
@@ -86,9 +86,9 @@
     </div>
   </section>
 
-  <footer class="page-footer">
+  <div class="page-footer">
     <p>&copy; 2025 FoodieExpress. All rights reserved.</p>
-  </footer>
+  </div>
 
 </body>
 </html>
